RESOLVED FIXED 253067
nullptr crash in WebCore::SelectorChecker::attributeSelectorMatches
https://bugs.webkit.org/show_bug.cgi?id=253067
Summary nullptr crash in WebCore::SelectorChecker::attributeSelectorMatches
Antti Koivisto
Reported 2023-02-28 03:25:24 PST
50 WebCore::SelectorChecker::attributeSelectorMatches(WebCore::Element const&, WebCore::QualifiedName const&, WTF::AtomString const&, WebCore::CSSSelector const&) <== 50 WebCore::Style::AttributeChangeInvalidation::invalidateStyle(WebCore::QualifiedName const&, WTF::AtomString const&, WTF::AtomString const&) 42 WebCore::Element::setAttributeInternal(unsigned int, WebCore::QualifiedName const&, WTF::AtomString const&, WebCore::Element::SynchronizationOfLazyAttribute) | 19 WebCore::Element::setAttribute(WTF::AtomString const&, WTF::AtomString const&)
Attachments
Antti Koivisto
Comment 1 2023-02-28 03:25:47 PST
Antti Koivisto
Comment 2 2023-02-28 03:30:30 PST
EWS
Comment 3 2023-03-02 09:37:46 PST
Committed 261076@main (2c5baee03fa2): <https://commits.webkit.org/261076@main> Reviewed commits have been landed. Closing PR #10789 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.