nullptr crash in WebCore::SelectorChecker::attributeSelectorMatches https://bugs.webkit.org/show_bug.cgi?id=253067 rdar://105628059

Reviewed by Geoffrey Garen and Alan Baradlay.

Speculative fix.

* Source/WebCore/style/AttributeChangeInvalidation.cpp:
(WebCore::Style::AttributeChangeInvalidation::invalidateStyle):

Check that we actually have an attribute selector.

Canonical link: https://commits.webkit.org/261076@main